Added myself to Uploaders to get rid of NMU errors.
git-svn-id: svn+ssh://svn.debian.org/svn/pkg-sql-ledger/ledger-smb/trunk@156 c065a19f-0a03-0410-aadb-caf30d9ec67c

--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: ledgersmb
 Section: web
 Priority: optional
 Maintainer: Seneca Cunningham <tetragon@ledgersmb.org>
+Uploaders: Elizabeth Bevilacqua <lyz@princessleia.com>
 Build-Depends: debhelper (>= 5), dpatch
 Standards-Version: 3.7.2
 
