--- a/ledger-smb/trunk/debian/control
+++ b/ledger-smb/trunk/debian/control
@@ -2,6 +2,7 @@ Source: ledgersmb
 Section: web
 Priority: optional
 Maintainer: Seneca Cunningham <tetragon@ledgersmb.org>
+Uploaders: Elizabeth Bevilacqua <lyz@princessleia.com>
 Build-Depends: debhelper (>= 5), dpatch
 Standards-Version: 3.7.2
 
