Package is team maintained - set maintainer to the team mailing list, add Seneca and myself to uploaders
git-svn-id: svn+ssh://svn.debian.org/svn/pkg-sql-ledger/ledger-smb/trunk@158 c065a19f-0a03-0410-aadb-caf30d9ec67c

--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,8 @@
 Source: ledgersmb
 Section: web
 Priority: optional
-Maintainer: Seneca Cunningham <tetragon@ledgersmb.org>
-Uploaders: Elizabeth Bevilacqua <lyz@princessleia.com>
+Maintainer: Debian LedgerSMB Team <pkg-sql-ledger-discussion@lists.alioth.debian.org>
+Uploaders: Elizabeth Bevilacqua <lyz@princessleia.com>, Seneca Cunningham <tetragon@ledgersmb.org>, Michael C. Schultheiss <schultmc@debian.org>
 Build-Depends: debhelper (>= 5), dpatch
 Standards-Version: 3.7.2
 
