--- a/ledger-smb/trunk/debian/control
+++ b/ledger-smb/trunk/debian/control
@@ -1,8 +1,8 @@
 Source: ledgersmb
 Section: web
 Priority: optional
-Maintainer: Seneca Cunningham <tetragon@ledgersmb.org>
-Uploaders: Elizabeth Bevilacqua <lyz@princessleia.com>
+Maintainer: Debian LedgerSMB Team <pkg-sql-ledger-discussion@lists.alioth.debian.org>
+Uploaders: Elizabeth Bevilacqua <lyz@princessleia.com>, Seneca Cunningham <tetragon@ledgersmb.org>, Michael C. Schultheiss <schultmc@debian.org>
 Build-Depends: debhelper (>= 5), dpatch
 Standards-Version: 3.7.2
 
