--- a/ledger-smb/trunk/debian/control
+++ b/ledger-smb/trunk/debian/control
@@ -2,9 +2,14 @@ Source: ledgersmb
 Section: web
 Priority: optional
 Maintainer: Debian LedgerSMB Team <pkg-sql-ledger-discussion@lists.alioth.debian.org>
-Uploaders: Elizabeth Bevilacqua <lyz@princessleia.com>, Seneca Cunningham <tetragon@ledgersmb.org>, Michael C. Schultheiss <schultmc@debian.org>
+Uploaders: Elizabeth Bevilacqua <lyz@princessleia.com>, 
+  Seneca Cunningham <tetragon@ledgersmb.org>, 
+  Michael C. Schultheiss <schultmc@debian.org>
 Build-Depends: debhelper (>= 5), dpatch
 Standards-Version: 3.7.3
+Homepage: http://www.ledgersmb.org/
+Vcs-Svn: svn://svn.debian.org/pkg-sql-ledger/ledger-smb/trunk
+Vcs-Browser: http://svn.debian.org/wsvn/pkg-sql-ledger/ledger-smb/trunk
 
 Package: ledgersmb
 Architecture: all
