--- a/ledger-smb/trunk/debian/rules
+++ b/ledger-smb/trunk/debian/rules
@@ -1,10 +1,4 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
@@ -44,12 +38,95 @@ install: build
 	    -e 's|^latex : 1$$|latex : 0|' \
 	    -e '/^localepath/d' \
 	    ledgersmb.conf.default > ledgersmb.conf
-	$(MAKE) install DESTDIR=$(CURDIR)/debian/ledgersmb
+	
+
+	# Attempt to port old makefile		
+	mkdir -p $(DESTDIR)/usr/share/ledgersmb 
+	# Copy all of the perl files	
+	cp $(shell ls *.pl | grep -v -E '(pos\.conf)\.pl') $(DESTDIR)/usr/share/ledgersmb
+	# Copy some of the images and others	
+	cp  favicon.ico login.pl menu.ini ledgersmb.conf.default VERSION index.html ledger-smb.png ledger-smb.gif ledger-smb_small.png $(DESTDIR)/usr/share/ledgersmb
+	# Bin directory 
+	mkdir -p $(DESTDIR)/usr/share/ledgersmb/bin/custom
+	cp  bin/*.pl $(DESTDIR)/usr/share/ledgersmb/bin
+	find $(DESTDIR)/usr/share/ledgersmb/bin -type d -exec chmod 755 '{}' \;
+	find $(DESTDIR)/usr/share/ledgersmb/bin -type f -exec chmod 644 '{}' \;
+	# Contrib Directory
+	mkdir -p $(DESTDIR)/usr/share/doc/ledgersmb/contrib
+	pwd	
+	cp -r bin/* $(DESTDIR)/usr/share/doc/ledgersmb/contrib
+	# Css Directory
+	mkdir -p $(DESTDIR)/var/lib/ledgersmb/css
+	cp css/ledger-smb*.css $(DESTDIR)/var/lib/ledgersmb/css
+	chmod 644 $(DESTDIR)/var/lib/ledgersmb/css/*
+	ln -sf /var/lib/ledgersmb/css $(DESTDIR)/usr/share/ledgersmb	
+	# Docs
+	mkdir -p $(DESTDIR)/usr/share/ledgersmb/doc
+	cp doc/LedgerSMB-manual.pdf $(DESTDIR)/usr/share/ledgersmb/doc
+	mkdir -p $(DESTDIR)/usr/share/doc/ledgersmb
+	cp -a doc/COPYRIGHT $(DESTDIR)/usr/share/doc/ledgersmb
+	cp -a doc/API $(DESTDIR)/usr/share/doc/ledgersmb
+	cp -a doc/manual $(DESTDIR)/usr/share/doc/ledgersmb
+	cp -a doc/database $(DESTDIR)/usr/share/doc/ledgersmb
+	cp -a doc/samples $(DESTDIR)/usr/share/doc/ledgersmb
+	# Drivers
+	mkdir -p $(DESTDIR)/usr/share/ledgersmb/drivers
+	cp drivers/*.pl	 $(DESTDIR)/usr/share/ledgersmb/drivers
+	chmod 644 $(DESTDIR)/usr/share/ledgersmb/drivers/*
+	# LedgerSMB
+	mkdir -p $(DESTDIR)/usr/share/ledgersmb/LedgerSMB
+	cp -r LedgerSMB/*.pm  $(DESTDIR)/usr/share/ledgersmb/LedgerSMB
+	cp -r LedgerSMB/Taxes $(DESTDIR)/usr/share/ledgersmb/LedgerSMB
+	cp -r LedgerSMB/Session $(DESTDIR)/usr/share/ledgersmb/LedgerSMB
+	cp -r LedgerSMB/CreditCard $(DESTDIR)/usr/share/ledgersmb/LedgerSMB
+	find $(DESTDIR)/usr/share/ledgersmb/LedgerSMB -type f -exec chmod 644 '{}' \;
+	find $(DESTDIR)/usr/share/ledgersmb/LedgerSMB -type d -exec chmod 755 '{}' \;
+	# Locale
+	mkdir -p $(DESTDIR)/usr/share/ledgersmb/locale/po
+	mkdir -p $(DESTDIR)/usr/share/ledgersmb/locale/html
+	cp locale/po/* $(DESTDIR)/usr/share/ledgersmb/locale/po
+	cp locale/html/*.html $(DESTDIR)/usr/share/ledgersmb/locale/html
+	cp locale/LedgerSMB.pot $(DESTDIR)/usr/share/ledgersmb/locale
+	cp locale/*.html $(DESTDIR)/usr/share/ledgersmb/locale
+	find $(DESTDIR)/usr/share/ledgersmb/locale -type d -exec chmod 755 '{}' \;
+	find $(DESTDIR)/usr/share/ledgersmb/locale -type f -exec chmod 644 '{}' \;
+	# sql
+	mkdir -p $(DESTDIR)/usr/share/ledgersmb/sql/legacy
+	cp sql/*.sql $(DESTDIR)/usr/share/ledgersmb/sql
+	cp -r sql/legacy $(DESTDIR)/usr/share/ledgersmb/sql
+	find $(DESTDIR)/usr/share/ledgersmb/sql -type f -exec chmod 644 '{}' \;
+	find $(DESTDIR)/usr/share/ledgersmb/sql -type d -exec chmod 755 '{}' \;
+	# templates
+	mkdir -p $(DESTDIR)/var/lib/ledgersmb/templates
+	cp -a templates/*.html templates/*.tex templates/*.txt $(DESTDIR)/var/lib/ledgersmb/templates
+	cp -a templates/demo $(DESTDIR)/var/lib/ledgersmb/templates
+	chown -R www-data:www-data $(DESTDIR)/var/lib/ledgersmb/templates
+	ln -sf /var/lib/ledgersmb/templates $(DESTDIR)/usr/share/ledgersmb/
+	find $(DESTDIR)/var/lib/ledgersmb/templates -type f -exec chmod 644 '{}' \;
+	find $(DESTDIR)/var/lib/ledgersmb/templates -type d -exec chmod 755 '{}' \;
+	# utils
+	mkdir -p $(DESTDIR)/usr/share/doc/ledgersmb/utils	
+	cp -r utils/* $(DESTDIR)/usr/share/doc/ledgersmb/utils
+	mkdir -p $(DESTDIR)/etc/ledgersmb
+	# Copy the configs	
+	cp ledgersmb.conf ledgersmb-httpd.conf pos.conf.pl $(DESTDIR)/etc/ledgersmb
+	cd $(DESTDIR)/usr/share/ledgersmb ; \
+	ln -sf /etc/ledgersmb/pos.conf.pl ; \
+	ln -sf /var/lib/ledgersmb/images
+	mkdir -p $(DESTDIR)/var/lib/ledgersmb/spool
+	chown www-data:www-data $(DESTDIR)/var/lib/ledgersmb/spool
+	mkdir -p $(DESTDIR)/var/lib/ledgersmb/images
+	mkdir -p $(DESTDIR)/var/lib/ledgersmb/images/demo
+	cp $(DESTDIR)/var/lib/ledgersmb/templates/demo/*.[^ht]* $(DESTDIR)/var/lib/ledgersmb/images
+	cp $(DESTDIR)/var/lib/ledgersmb/templates/demo/*.[^ht]* $(DESTDIR)/var/lib/ledgersmb/images/demo
+	chown -R www-data:www-data $(DESTDIR)/var/lib/ledgersmb/templates
+
+
 	chown www-data:www-data $(CURDIR)/debian/ledgersmb/etc/ledgersmb/*
 	chmod 0600 $(CURDIR)/debian/ledgersmb/etc/ledgersmb/*
 	chmod +x $(CURDIR)/debian/ledgersmb/usr/share/ledgersmb/upgrade-templates.pl
 	chmod -x $(CURDIR)/debian/ledgersmb/usr/share/ledgersmb/favicon.ico
-	cp debian/README.Ubuntu $(CURDIR)/debian/ledgersmb/usr/share/doc/ledgersmb
+	#cp debian/README.Ubuntu $(CURDIR)/debian/ledgersmb/usr/share/doc/ledgersmb
 
 
 # Build architecture-independent files here.
