--- a/ledger-smb/trunk/debian/rules
+++ b/ledger-smb/trunk/debian/rules
@@ -54,11 +54,10 @@ install: build
 
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/ledgersmb
 	chown www-data:www-data $(CURDIR)/debian/ledgersmb/etc/ledgersmb/*
-	chmod 0600 $(CURDIR)/debian/ledgersmb/etc/ledgersmb/*
+	chmod 0600 $(CURDIR)/debian/ledgersmb/etc/ledgersmb/*.conf $(CURDIR)/debian/ledgersmb/etc/ledgersmb/*.pl
 	chmod +x $(CURDIR)/debian/ledgersmb/usr/share/ledgersmb/upgrade-templates.pl
 	chmod -x $(CURDIR)/debian/ledgersmb/usr/share/ledgersmb/favicon.ico
-	#cp debian/README.Ubuntu $(CURDIR)/debian/ledgersmb/usr/share/doc/ledgersmb
-
+	cp debian/ledgersmb.lintian-overrides $(DESTDIR)/usr/share/lintian/overrides/ledgersmb
 
 # Build architecture-independent files here.
 binary-indep: build install
