--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,8 @@ Priority: optional
 Maintainer: Debian LedgerSMB Team <pkg-sql-ledger-discussion@lists.alioth.debian.org>
 Uploaders: Elizabeth Krumbach <lyz@princessleia.com>, 
   Seneca Cunningham <tetragon@ledgersmb.org>, 
-  Michael C. Schultheiss <schultmc@debian.org>
+  Michael C. Schultheiss <schultmc@debian.org>,
+  Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 5), dpatch
 Standards-Version: 3.8.0
 Homepage: http://www.ledgersmb.org/
