Rotate 1.2.19-1 release to tags.

--- a/ledger-smb/tags/1.2.19-1/debian/rules
+++ b/ledger-smb/tags/1.2.19-1/debian/rules
@@ -53,8 +53,8 @@ install: build
 	
 
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/ledgersmb
-	#chown www-data:www-data $(CURDIR)/debian/ledgersmb/etc/ledgersmb/*
-	#chmod 0600 $(CURDIR)/debian/ledgersmb/etc/ledgersmb/*.conf $(CURDIR)/debian/ledgersmb/etc/ledgersmb/*.pl
+	chown www-data:www-data $(CURDIR)/debian/ledgersmb/etc/ledgersmb/*
+	chmod 0600 $(CURDIR)/debian/ledgersmb/etc/ledgersmb/*.conf $(CURDIR)/debian/ledgersmb/etc/ledgersmb/*.pl
 	chmod +x $(CURDIR)/debian/ledgersmb/usr/share/ledgersmb/upgrade-templates.pl
 	chmod -x $(CURDIR)/debian/ledgersmb/usr/share/ledgersmb/favicon.ico
 	cp debian/ledgersmb.lintian-overrides $(DESTDIR)/usr/share/lintian/overrides/ledgersmb
