--- a/ledger-smb/trunk/debian/rules
+++ b/ledger-smb/trunk/debian/rules
@@ -57,7 +57,6 @@ install: build
 	chmod 0600 $(CURDIR)/debian/ledgersmb/etc/ledgersmb/*.conf $(CURDIR)/debian/ledgersmb/etc/ledgersmb/*.pl
 	chmod +x $(CURDIR)/debian/ledgersmb/usr/share/ledgersmb/upgrade-templates.pl
 	chmod -x $(CURDIR)/debian/ledgersmb/usr/share/ledgersmb/favicon.ico
-	cp debian/ledgersmb.lintian-overrides $(DESTDIR)/usr/share/lintian/overrides/ledgersmb
 
 # Build architecture-independent files here.
 binary-indep: build install
@@ -67,6 +66,7 @@ binary-indep: build install
 	dh_installdocs
 	dh_installexamples
 #	dh_install
+	dh_lintian
 #	dh_installdebconf	
 	dh_link
 	dh_compress
