--- a/debian/rules
+++ b/debian/rules
@@ -3,14 +3,14 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-include /usr/share/dpatch/dpatch.make
+include /usr/share/quilt/quilt.make
 
 DESTDIR = $(CURDIR)/debian/ledgersmb
 INSTALL = install
 
 
 configure: configure-stamp
-configure-stamp: patch-stamp
+configure-stamp: $(QUILT_STAMPFN)
 	dh_testdir
 	# Add here commands to configure the package.
 
