--- a/ledger-smb/trunk/debian/rules
+++ b/ledger-smb/trunk/debian/rules
@@ -61,7 +61,7 @@ binary-indep: build install
 	dh_installchangelogs Changelog
 	dh_installdocs
 	dh_installexamples
-#	dh_install
+	dh_install
 	dh_lintian
 #	dh_installdebconf
 	dh_link
