--- a/ledger-smb/trunk/debian/rules
+++ b/ledger-smb/trunk/debian/rules
@@ -47,19 +47,12 @@ install: build
 	    -e '/^localepath/d' \
 	    ledgersmb.conf.default > ledgersmb.conf
 
-	chmod +x $(CURDIR)/configure_apache.sh
-	chmod +x $(CURDIR)/upgrade-templates.pl
-	chmod -x $(CURDIR)/favicon.ico
-	chmod -x $(CURDIR)/css/*css
 	chmod -x $(CURDIR)/locale/po/*
+	chmod -x $(CURDIR)/locale/html/*
 	chmod -x $(CURDIR)/sql/*sql
-	chmod -x $(CURDIR)/sql/legacy/*sql
-	chmod -x $(CURDIR)/templates/*.html
-	chmod -x $(CURDIR)/templates/*.tex
-	chmod -x $(CURDIR)/templates/*logo*
+	chmod -x $(CURDIR)/sql/coa/*sql
 	chmod -x $(CURDIR)/LedgerSMB/*pm
-	chmod -x $(CURDIR)/LedgerSMB/CreditCard/*pm
-	chmod -x $(CURDIR)/LedgerSMB/Session/*pm
+	chmod -x $(CURDIR)/LedgerSMB/Auth/*pm
 	chmod -x $(CURDIR)/LedgerSMB/Taxes/*pm
 	chmod -x $(CURDIR)/LedgerSMB/Template/*pm
 
