Use package Makefile.PL for v1.2 builds.
git-svn-id: svn+ssh://svn.debian.org/svn/pkg-sql-ledger/ledger-smb/branches/v1.2@297 c065a19f-0a03-0410-aadb-caf30d9ec67c

--- a/debian/rules
+++ b/debian/rules
@@ -47,6 +47,9 @@ install: build
 	    -e '/^localepath/d' \
 	    ledgersmb.conf.default > ledgersmb.conf
 
+	perl Makefile.PL --skipdeps
+	$(MAKE)
+
 	chmod +x $(CURDIR)/configure_apache.sh
 	chmod +x $(CURDIR)/upgrade-templates.pl
 	chmod -x $(CURDIR)/favicon.ico
