Initial v1.3 related file installation changes.
git-svn-id: svn+ssh://svn.debian.org/svn/pkg-sql-ledger/ledger-smb/trunk@299 c065a19f-0a03-0410-aadb-caf30d9ec67c

--- a/debian/rules
+++ b/debian/rules
@@ -50,6 +50,11 @@ install: build
 	perl Makefile.PL --skipdeps
 	$(MAKE)
 
+    # Corrections to file permissions
+	chmod +x $(CURDIR)/blib/lib/*.pl
+	chmod +x $(CURDIR)/scripts/*.pl
+	chmod +x $(CURDIR)/sql/modules/*.sh
+	chmod +x $(CURDIR)/tools/*.sh
 	chmod -x $(CURDIR)/locale/po/*
 	chmod -x $(CURDIR)/locale/html/*
 	chmod -x $(CURDIR)/sql/*sql
