--- a/ledger-smb/branches/v1.2/debian/rules
+++ b/ledger-smb/branches/v1.2/debian/rules
@@ -73,7 +73,7 @@ binary-indep: build install
 	dh_installchangelogs Changelog
 	dh_installdocs
 	dh_installexamples
-	dh_install
+	dh_install -Xauto/
 	dh_lintian
 #	dh_installdebconf
 	dh_link
