--- a/ledger-smb/branches/v1.2/debian/control
+++ b/ledger-smb/branches/v1.2/debian/control
@@ -9,8 +9,8 @@ Uploaders: Elizabeth Krumbach <lyz@princessleia.com>,
 Build-Depends: debhelper (>= 7.0.50)
 Standards-Version: 3.9.1
 Homepage: http://www.ledgersmb.org/
-Vcs-Svn: svn://svn.debian.org/pkg-sql-ledger/ledger-smb/trunk
-Vcs-Browser: http://svn.debian.org/wsvn/pkg-sql-ledger/ledger-smb/trunk
+Vcs-Svn: svn://svn.debian.org/pkg-sql-ledger/ledger-smb/branches/v1.2
+Vcs-Browser: http://svn.debian.org/wsvn/pkg-sql-ledger/ledger-smb/branches/v1.2
 
 Package: ledgersmb
 Architecture: all
