Install LSMB v1.2 man pages from blib/man3/.
git-svn-id: svn+ssh://svn.debian.org/svn/pkg-sql-ledger/ledger-smb/branches/v1.2@303 c065a19f-0a03-0410-aadb-caf30d9ec67c

--- a/debian/rules
+++ b/debian/rules
@@ -74,6 +74,7 @@ binary-indep: build install
 	dh_installdocs
 	dh_installexamples
 	dh_install -Xauto/
+	dh_installman blib/man3/*
 	dh_lintian
 #	dh_installdebconf
 	dh_link
