--- a/debian/control
+++ b/debian/control
@@ -6,16 +6,16 @@ Uploaders: Elizabeth Krumbach <lyz@princessleia.com>,
   Seneca Cunningham <tetragon@ledgersmb.org>, 
   Michael C. Schultheiss <schultmc@debian.org>,
   Robert James Clay <jame@rocasa.us>
-Build-Depends: debhelper (>= 7.0.50), libmodule-install-perl
+Build-Depends: debhelper (>= 7.0.50)
 Standards-Version: 3.9.1
 Homepage: http://www.ledgersmb.org/
-Vcs-Svn: svn://svn.debian.org/pkg-sql-ledger/ledger-smb/trunk
-Vcs-Browser: http://svn.debian.org/wsvn/pkg-sql-ledger/ledger-smb/trunk
+Vcs-Svn: svn://svn.debian.org/pkg-sql-ledger/ledger-smb/branches/v1.2
+Vcs-Browser: http://svn.debian.org/wsvn/pkg-sql-ledger/ledger-smb/branches/v1.2
 
 Package: ledgersmb
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, perl (>= 5.8.0-1), libconfig-std-perl, libconfig-any-perl, libmime-lite-perl, liblocale-maketext-lexicon-perl (>= 0.62-1), libdbi-perl, libdbd-pg-perl, postgresql-client-8.3 | postgresql-client-8.4, postgresql-contrib, apache2, libhtml-parser-perl, liblog-log4perl-perl, libdatetime-perl, libtemplate-perl (>=2.14-1), liberror-perl, libcgi-simple-perl, libfile-mimeinfo-perl, libio-stringy-perl
-Recommends: mail-transport-agent, texlive-latex-recommended, lpr, libmath-bigint-gmp-perl, libparse-recdescent-perl, libxml-twig-perl
+Depends: ${shlibs:Depends}, ${misc:Depends}, perl (>= 5.8.0-1), libclass-std-perl, libconfig-std-perl, libconfig-any-perl, libmime-lite-perl, liblocale-maketext-lexicon-perl (>= 0.56-1), libdbi-perl, libdbd-pg-perl, postgresql-client-8.3 | postgresql-client-8.4, apache2, libhtml-linkextractor-perl, libdata-dumper-simple-perl
+Recommends: mail-transport-agent, texlive-full | tetex-extra, lpr, libparse-recdescent-perl
 Suggests: postgresql-8.3 | postgresql-8.4, libnet-tclink-perl, latex-cjk-all
 Conflicts: ledger-smb
 Replaces: ledger-smb
