--- a/debian/rules
+++ b/debian/rules
@@ -43,6 +43,7 @@ install: build
 
 	# Add here commands to install the package into debian/ledgersmb.
 	sed -e 's|^spool      = .*$$|spool  = /var/lib/ledgersmb/spool|' \
+	    -e 's|^templates  = .*$$|templates  = /etc/ledgersmb/templates|' \
 	    -e 's|^latex : 1$$|latex : 0|' \
 	    -e '/^localepath/d' \
 	    ledgersmb.conf.default > ledgersmb.conf
@@ -50,17 +51,19 @@ install: build
 	perl Makefile.PL --skipdeps
 	$(MAKE)
 
-    # Corrections to file permissions
-	chmod +x $(CURDIR)/blib/lib/*.pl
-	chmod +x $(CURDIR)/scripts/*.pl
-	chmod +x $(CURDIR)/sql/modules/*.sh
-	chmod +x $(CURDIR)/tools/*.sh
+	chmod +x $(CURDIR)/configure_apache.sh
+	chmod +x $(CURDIR)/upgrade-templates.pl
+	chmod -x $(CURDIR)/favicon.ico
+	chmod -x $(CURDIR)/css/*css
 	chmod -x $(CURDIR)/locale/po/*
-	chmod -x $(CURDIR)/locale/html/*
 	chmod -x $(CURDIR)/sql/*sql
-	chmod -x $(CURDIR)/sql/coa/*sql
+	chmod -x $(CURDIR)/sql/legacy/*sql
+	chmod -x $(CURDIR)/templates/*.html
+	chmod -x $(CURDIR)/templates/*.tex
+	chmod -x $(CURDIR)/templates/*logo*
 	chmod -x $(CURDIR)/LedgerSMB/*pm
-	chmod -x $(CURDIR)/LedgerSMB/Auth/*pm
+	chmod -x $(CURDIR)/LedgerSMB/CreditCard/*pm
+	chmod -x $(CURDIR)/LedgerSMB/Session/*pm
 	chmod -x $(CURDIR)/LedgerSMB/Taxes/*pm
 	chmod -x $(CURDIR)/LedgerSMB/Template/*pm
 
@@ -71,7 +74,8 @@ binary-indep: build install
 	dh_installchangelogs Changelog
 	dh_installdocs
 	dh_installexamples
-	dh_install
+	dh_install -Xauto/
+	dh_installman blib/man3/*
 	dh_lintian
 #	dh_installdebconf
 	dh_link
