Create default ledgersmb-httpd.conf from ledgersmb-httpd.conf.template.
git-svn-id: svn+ssh://svn.debian.org/svn/pkg-sql-ledger/ledger-smb/trunk@328 c065a19f-0a03-0410-aadb-caf30d9ec67c

--- a/debian/rules
+++ b/debian/rules
@@ -42,6 +42,9 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/ledgersmb.
+
+	cp ledgersmb-httpd.conf.template ledgersmb-httpd.conf
+
 	sed -e 's|^spool      = .*$$|spool  = /var/lib/ledgersmb/spool|' \
 	    -e 's|^latex : 1$$|latex : 0|' \
 	    -e '/^localepath/d' \
