--- a/debian/control
+++ b/debian/control
@@ -7,22 +7,22 @@ Uploaders: Robert James Clay <jame@rocasa.us>,
   Seneca Cunningham <tetragon@ledgersmb.org>,
   Michael C. Schultheiss <schultmc@debian.org>
 Build-Depends: debhelper (>= 7.0.50), libmodule-install-perl
-Standards-Version: 3.9.1
+Standards-Version: 3.9.2
 Homepage: http://www.ledgersmb.org/
 Vcs-Svn: svn://svn.debian.org/pkg-sql-ledger/ledger-smb/trunk
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-sql-ledger/ledger-smb/trunk
 
 Package: ledgersmb
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, perl (>= 5.8.0-1), libconfig-std-perl,
+Depends: ${perl:Depends}, ${misc:Depends}, perl (>= 5.8.0-1), libconfig-std-perl,
   libconfig-any-perl, libmime-lite-perl, libdbi-perl, libdbd-pg-perl, liberror-perl,
   liblocale-maketext-lexicon-perl (>= 0.62-1), libtemplate-perl (>=2.14-1), apache2,
   libhtml-parser-perl, liblog-log4perl-perl, libdatetime-perl,
   libcgi-simple-perl, libfile-mimeinfo-perl, libio-stringy-perl,
   postgresql-client-8.3 | postgresql-client-8.4, postgresql-contrib,
-Recommends: mail-transport-agent, texlive-latex-recommended, lpr, libopenoffice-oodoc-perl,
+Recommends: default-mta | mail-transport-agent, texlive-latex-recommended, libopenoffice-oodoc-perl,
   libmath-bigint-gmp-perl, libparse-recdescent-perl
-Suggests: postgresql-8.3 | postgresql-8.4, libnet-tclink-perl, latex-cjk-all
+Suggests: postgresql-8.3 | postgresql-8.4, lpr, libnet-tclink-perl, latex-cjk-all
 Conflicts: ledger-smb
 Replaces: ledger-smb
 Description: Web based double-entry accounting program
