Use find command to fix permissions on *.sh files.
git-svn-id: svn+ssh://svn.debian.org/svn/pkg-sql-ledger/ledger-smb/trunk@359 c065a19f-0a03-0410-aadb-caf30d9ec67c

--- a/debian/rules
+++ b/debian/rules
@@ -76,10 +76,9 @@ binary-indep: build install
 	dh_fixperms
     # Corrections to file permissions
 	chmod +x $(LSMBDIR)/scripts/*.pl
-	chmod +x $(LSMBDIR)/sql/modules/*.sh
-	chmod +x $(LSMBDIR)/tools/*.sh
 	chmod -x $(LSMBDIR)/locale/po/*
 	chmod -x $(LSMBDIR)/locale/html/*
+	find $(LSMBDIR) -name '*.sh' -exec chmod +x '{}' \;
 	find $(LSMBDIR) -name '*.pm' -exec chmod -x '{}' \;
 	find $(LSMBDIR) -name '*.sql' -exec chmod -x '{}' \;
 	dh_installdeb
