Override dh_auto_install instead of dh_auto_build in v1.2 debian/rules.

--- a/debian/rules
+++ b/debian/rules
@@ -11,14 +11,14 @@ override_dh_auto_configure:
 	    ledgersmb.conf.default > ledgersmb.conf
 	dh_auto_configure
 
-override_dh_auto_build:
-
 override_dh_auto_test:
 
 override_dh_auto_clean:
 	dh_auto_clean
 	rm -f ledgersmb.conf
 	rm -f ledgersmb-httpd.conf
+
+override_dh_auto_install:
 
 override_dh_install:
 	dh_install
