Change how Build.PL is being removed in debian/rules.
git-svn-id: svn+ssh://svn.debian.org/svn/pkg-sql-ledger/ledger-smb/trunk@428 c065a19f-0a03-0410-aadb-caf30d9ec67c

--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,7 @@
 	dh $@
 
 override_dh_auto_configure:
-	[ ! -e Build.PL ] || rm -f Build.PL
+	rm -f Build.PL
     # Per upstream; remove these empty directories if present, as they are not
     # needed for an installed LedgerSMB directory.
 	[ ! -e LedgerSMB/Assets ] || rmdir LedgerSMB/Assets
