Correct Uploaders list in LedgerSMB debian/control.
git-svn-id: svn+ssh://svn.debian.org/svn/pkg-sql-ledger/ledger-smb/trunk@490 c065a19f-0a03-0410-aadb-caf30d9ec67c

--- a/debian/control
+++ b/debian/control
@@ -2,10 +2,7 @@ Source: ledgersmb
 Section: web
 Priority: optional
 Maintainer: Debian LedgerSMB Team <pkg-sql-ledger-discussion@lists.alioth.debian.org>
-Uploaders: Robert James Clay <jame@rocasa.us>,
-  Elizabeth Krumbach <lyz@princessleia.com>,
-  Seneca Cunningham <tetragon@ledgersmb.org>,
-  Michael C. Schultheiss <schultmc@debian.org>
+Uploaders: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 8), libmodule-install-perl
 Standards-Version: 3.9.3
 Homepage: http://www.ledgersmb.org/
