Change the variable names used in the debconf/dbconfig scripting.

--- a/debian/ledgersmb.config
+++ b/debian/ledgersmb.config
@@ -14,17 +14,17 @@ if [ -f /usr/share/dbconfig-common/dpkg/config ]; then
     . /usr/share/dbconfig-common/dpkg/config
 fi
 
-db_input high ledgersmb/lsmb_debconf || true
+db_input high ledgersmb/debconf_install || true
 db_go || true
 
-db_get ledgersmb/lsmb_debconf
+db_get ledgersmb/debconf_install
 if [ "$RET" = true ];then
     if [ -f /usr/share/dbconfig-common/dpkg/config ]; then
         dbc_go ledgersmb $@
     fi
 
-    db_input high ledgersmb/lsmb_login || true
-    db_input high ledgersmb/lsmb_password || true
+    db_input high ledgersmb/admin_login || true
+    db_input high ledgersmb/admin_password || true
     db_go || true
 fi
 
